rubocop/examples/good/style_EvenOdd.rb
# This cop checks for places where Fixnum#even?
#   or Fixnum#odd? should have been used.

# good
if x.even?
